[tool.poetry]
name = "cellseg-gsontools"
version = "0.1.0"
description = "Toobelt for merging and extracting features from geojson masks."
authors = ["Okunator <oskari.lehtonen@helsinki.fi>"]
readme = "README.md"
packages = [{include = "cellseg_gsontools"}]

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.11.1"
shapely = "^1.8.5.post1"
numpy = "^1.23.4"
scipy = "^1.9.3"
pathos = "^0.2.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^22.1.11"
pyproject-flake8 = "^0.0.1-alpha.2"
pre-commit = "^2.17.0"
isort = "^5.10.1"
black = "^22.3.0"

[tool.poetry.group.dev.dependencies]
scriv = {extras = ["toml"], version = "^0.16.0"}
ipykernel = "^6.16.0"

[tool.scriv]
format = "md"
version = "literal: cellseg_gsontools/__init__.py: __version__"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"

[tool.isort]
profile = "black"
skip = [".gitignore", ".dockerignore", ".md", ".json"]
multi_line_output = 3

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,D103,D104,"
max-complexity = 10
exclude = ".git,__pycache__,docs/source/conftest.py,old,build,dist,test,tests"

[tool.coverage.run]
source = ["cellseg_gsontools"]

[tool.coverage.report]
omit = ["*/tests/*", "*/__init__.py", "*/datamodules/*", "*/wandb_callbacks.py"]
exclude_lines = [
    "raise TypeError",
    "raise ImportError",
    "raise NotImplementedError",
    "raise ZeroDivisionError",
    "raise ValueError",
    "raise IOError",
    "except ImportError",
    "except TypeError",
    "except Exception",
    "def extra_repr"
]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
